--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "lodash": "^4.17.13",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
-        "sass-loader": "^7.1.0"
+        "sass-loader": "^7.1.0",
+        "semantic-ui-css": "^2.4.1"
     },
     "dependencies": {
         "boostrap": "^2.0.0"
