--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:QGJARG1KQsKPsxwkLXuimGNlsUoKqz4e7wyF9jnnqsk=
 APP_DEBUG=true
-APP_URL=https://eventon15.herokuapp.com/
+APP_URL=https://eventon15.000webhostapp.com/
 
 LOG_CHANNEL=stack
 
