--- a/.env
+++ b/.env
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=remotemysql.com
 DB_PORT=3306
-DB_DATABASE=wDxTcyvIAt
-DB_USERNAME=wDxTcyvIAt
-DB_PASSWORD=8tIE3PMmgT
+DB_DATABASE=GzMkPfo94t
+DB_USERNAME=GzMkPfo94t
+DB_PASSWORD=nZ0zOGQrwh
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
