--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:SwFRNREwllEMyovYUz7HKeiR36JkEWS/vg6vtF1oilI=
 APP_DEBUG=true
-APP_URL=https://boisterous-tulumba-97c279.netlify.app/
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
@@ -42,6 +42,3 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
-
-NETLIFY_SITE_ID=e3acbdbd-b6e5-4fbc-965f-f09b0036de8f
-NETLIFY_AUTH_TOKEN=5XB6J_geqSPgYZ76v3d9WLGyf_5s5jfKX-SO-Eo_SaM
