--- a/composer.json
+++ b/composer.json
@@ -8,18 +8,21 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2",
-        "fideloper/proxy": "^4.0",
-        "laravel/framework": "^6.0",
-        "laravel/tinker": "^1.0",
+        "php": "^8.1",
+        "fideloper/proxy": "^4.4",
+        "laravel/framework": "^8.0",
+        "fruitcake/laravel-cors": "^2.0",
+        "laravel/ui": "^3.0",
+        "guzzlehttp/guzzle": "^7.0.1",
+        "laravel/tinker": "^2.5",
         "simplesoftwareio/simple-qrcode": "^2.0"
     },
     "require-dev": {
-        "facade/ignition": "^1.4",
-        "fzaninotto/faker": "^1.4",
-        "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^8.0"
+        "facade/ignition": "^2.3.6",
+        "fzaninotto/faker": "^1.9.1",
+        "mockery/mockery": "^1.3.1",
+        "nunomaduro/collision": "^5.0",
+        "phpunit/phpunit": "^9.3"
     },
     "config": {
         "optimize-autoloader": true,
